# distributed-learning

./: README.md
MapReduce/: CMakeLists.txt  KeyValue.h  MapReduce.grpc.pb.cc  MapReduce.grpc.pb.h  MapReduce.pb.cc  MapReduce.pb.h  MapReduce.proto  MapReduceFunc.cpp  master.cpp  worker.cpp
raft/: ApplyMsg.h  CMakeLists.txt  KVStore.grpc.pb.cc  KVStore.grpc.pb.h  KVStore.pb.cc  KVStore.pb.h  KVStore.proto  README.md  client.cpp  raft.hpp  raft.proto  raftNode.cpp  raftRpc.cpp  raftRpc.grpc.pb.cc  raftRpc.grpc.pb.h  raftRpc.h  raftRpc.pb.cc  raftRpc.pb.h  raftRpc.proto  server.cpp  store.hpp
